# super-todo

./: .dockerignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  PHASE1_README.md  PROJECT_REQUIREMENTS.md  REACTIVE_AGENT_IMPLEMENTATION_PLAN.md  README.md  VOICE_AGENT_MILESTONE1_SUMMARY.md  dinner_invitation_agent_prompt.md  main.py  migrate_voice_calls.py  package-lock.json  package.json  pyproject.toml  setup_database.py  test_connection.py  test_orchestrator.py  test_voice_agent_milestone1.py  voice_agent_implementation_plan.md
.github/workflows/: deploy.yaml
app/: config.py  convex_client.py  dependencies.py  main.py  schemas.py  supabase_client.py
app/orchestrator/: __init__.py  state.py  supervisor.py  task_analyzer.py
app/orchestrator/agents/: __init__.py  base.py  browser.py  search.py  voice.py
app/orchestrator/nodes/: __init__.py
app/repositories/: attachments_repository.py  items_repository.py  logs_repository.py
app/routers/: browser.py  items.py  logs.py  orchestrator.py  vapi_webhook.py
app/services/: browser_service.py  call_metadata_service.py  items_service.py  logs_service.py
convex/: items.ts  logs.ts  schema.ts
convex/_generated/: api.d.ts
sql/: phase1_orchestrator.sql  setup.sql  voice_calls_migration.sql
